--- a/style.css
+++ b/style.css
@@ -4,4 +4,14 @@ position:absolute;
   top:30px;
 font-family:cursive;
   color:rgb(220, 20, 60);
+  background-color:rgb(78,78,78);
+}
+#info {
+position:absolute;
+left:60px;
+  top:37px;
+font-family:sans-serif;
+  color:rgb(192, 192, 192);
+  
+  
 }
