--- a/style.css
+++ b/style.css
@@ -1,15 +1,16 @@
 #greeting {
 position:absolute;
-  left:450px;
+  left:400px;
   top:30px;
 font-family:cursive;
   color:rgb(220, 20, 60);
-  background-color:rgb(78,78,78);
+  background-color:rgb(129, 205, 245);
 }
 #info {
 position:absolute;
-left:60px;
-  top:37px;
+left:425px;
+  top:70px;
+  font-size:40px;
 font-family:sans-serif;
   color:rgb(192, 192, 192);
   
